--- a/app/src/main/res/layout/frg_001.xml
+++ b/app/src/main/res/layout/frg_001.xml
@@ -10,7 +10,8 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="30dp"
+            android:layout_width="35dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/ic_back"
             android:layout_height="match_parent"/>
         <TextView
