--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -17,12 +17,13 @@
             android:layout_width="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            tools:ignore="UselessParent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Control Center"
+                android:text="@string/control_center"
                 android:textColor="#FFFF99"
                 android:textAllCaps="true"
                 android:textSize="20sp" />
@@ -30,16 +31,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="IOS 11"
+                android:text="@string/ios_11"
                 android:textColor="#FFFF99"
                 android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="How to use"
-                android:textColor="#5EAB64"
-                android:textSize="16sp" />
+                android:text="@string/how_to_use"
+                android:textColor="#055D83"
+                android:textSize="18sp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -59,13 +60,15 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="15dp"
                 android:paddingStart="10dp"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                tools:ignore="RtlSymmetry">
 
                 <ImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/shield" />
+                    android:src="@mipmap/shield"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -73,7 +76,7 @@
                     android:layout_marginStart="30dp"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:text="Privacy Policy"
+                    android:text="@string/privacy_policy"
                     android:textColor="@color/black" />
             </TableRow>
             <TableRow
@@ -81,42 +84,22 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="15dp"
                 android:paddingStart="10dp"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                tools:ignore="RtlSymmetry">
 
                 <ImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/clicking" />
+                    android:src="@mipmap/clicking"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="30dp"
                     android:gravity="center_vertical"
-                    android:text="How to use"
-                    android:textStyle="bold"
-                    android:textColor="@color/black" />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingStart="10dp"
-                android:layout_marginTop="15dp"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginStart="10dp"
-                    android:src="@mipmap/internet" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="30dp"
-                    android:gravity="center_vertical"
-                    android:text="Website"
+                    android:text="@string/how_to_use"
                     android:textStyle="bold"
                     android:textColor="@color/black" />
             </TableRow>
@@ -125,13 +108,39 @@
                 android:layout_height="match_parent"
                 android:paddingStart="10dp"
                 android:layout_marginTop="15dp"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                tools:ignore="RtlSymmetry">
 
                 <ImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/information" />
+                    android:src="@mipmap/internet"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="30dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/website"
+                    android:textStyle="bold"
+                    android:textColor="@color/black" />
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingStart="10dp"
+                android:layout_marginTop="15dp"
+                android:gravity="center_vertical"
+                tools:ignore="RtlSymmetry">
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@mipmap/information"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -140,7 +149,8 @@
                     android:gravity="center_vertical"
                     android:text="About"
                     android:textStyle="bold"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    tools:ignore="HardcodedText" />
             </TableRow>
         </LinearLayout>
     </ScrollView>
