--- a/app/src/main/res/layout/frg_002_main.xml
+++ b/app/src/main/res/layout/frg_002_main.xml
@@ -3,16 +3,16 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:id="@+id/drawer"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/iv_1"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="fitXY"
                 android:src="@mipmap/iv_center"
@@ -89,28 +89,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_1">
 
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
                     android:background="@color/white"
                     android:orientation="vertical"
                     tools:ignore="ScrollViewSize">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:background="@color/grey_dak" />
-
                     <TableRow
+                        android:id="@+id/tr_size"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center_vertical">
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.12"
+                        android:layout_marginTop="10dp">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:maxWidth="45dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:src="@mipmap/size"
                             tools:ignore="ContentDescription" />
@@ -120,27 +119,28 @@
                             android:layout_height="match_parent"
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
-                            android:textSize="15sp"
+                            android:textSize="18sp"
                             android:text="@string/size"
                             android:textColor="@color/black" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginStart="55dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
 
                     <TableRow
+                        android:id="@+id/tr_color"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tr_size"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxWidth="45dp"
+
                             android:layout_marginStart="10dp"
                             android:src="@mipmap/palette"
                             tools:ignore="ContentDescription" />
@@ -151,26 +151,25 @@
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/color"
-                            android:textSize="15sp"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginStart="55dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
-
                     <TableRow
+                        android:id="@+id/tr_position"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/tr_color"
                         android:gravity="center_vertical">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:maxWidth="45dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:src="@mipmap/grid"
                             tools:ignore="ContentDescription" />
@@ -181,28 +180,29 @@
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/position"
-                            android:textSize="15sp"
+                            android:textSize="18sp"
                             android:textColor="@color/black" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginStart="55dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
 
                     <TableRow
+                        android:id="@+id/tr_background"
+                        app:layout_constraintTop_toBottomOf="@id/tr_position"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:maxWidth="45dp"
+                            android:scaleType="centerCrop"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:src="@mipmap/ic_monitor"
+                            android:src="@mipmap/monitor"
                             tools:ignore="ContentDescription" />
 
                         <TextView
@@ -211,26 +211,27 @@
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/background"
-                            android:textSize="15sp"
+                            android:textSize="18sp"
                             android:textColor="@color/black" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginStart="55dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
+
 
                     <TableRow
+                        android:id="@+id/tr_record"
+                        app:layout_constraintTop_toBottomOf="@id/tr_background"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:maxWidth="45dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:src="@mipmap/record"
                             tools:ignore="ContentDescription" />
@@ -241,26 +242,24 @@
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/record"
-                            android:textSize="15sp"
+                            android:textSize="18sp"
                             android:textColor="@color/black" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginStart="55dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
-
                     <TableRow
+                        android:id="@+id/tr_music"
+                        app:layout_constraintTop_toBottomOf="@id/tr_record"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:src="@mipmap/music"
                             tools:ignore="ContentDescription" />
@@ -271,26 +270,24 @@
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/music"
-                            android:textSize="15sp"
+                            android:textSize="18sp"
                             android:textColor="@color/black" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginStart="55dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
-
                     <TableRow
+                        android:id="@+id/tr_customize"
+                        app:layout_constraintTop_toBottomOf="@id/tr_music"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:src="@mipmap/custom"
                             tools:ignore="ContentDescription" />
@@ -301,26 +298,25 @@
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/custom_control"
-                            android:textSize="15sp"
+                            android:textSize="18sp"
                             android:textColor="@color/black" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginStart="55dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/tr_customize"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical">
 
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:src="@mipmap/translate"
                             tools:ignore="ContentDescription" />
@@ -331,16 +327,11 @@
                             android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/language"
-                            android:textSize="15sp"
+                            android:textSize="18sp"
                             android:textColor="@color/black" />
                     </TableRow>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.3dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/grey_dak" />
-                </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
 
             <ImageView
