--- a/app/src/main/res/layout/item_cus_controls.xml
+++ b/app/src/main/res/layout/item_cus_controls.xml
@@ -17,7 +17,7 @@
         android:gravity="center_vertical"
         android:layout_height="45dp">
         <ImageView
-            android:layout_width="40dp"
+            android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
             android:src="@drawable/ic_disturb"
@@ -32,7 +32,8 @@
 
         <TextView
             android:id="@+id/tv_story_name"
-            android:layout_width="220dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:fontFamily="sans-serif-light"
@@ -40,7 +41,7 @@
             android:textColor="@color/black"
             android:textSize="20sp" />
         <ImageView
-            android:layout_width="35dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_dehaze_24"
             tools:ignore="ContentDescription" />
