--- a/app/src/main/res/layout/frg_music_control.xml
+++ b/app/src/main/res/layout/frg_music_control.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ln_music"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/green_m"
@@ -31,30 +36,43 @@
     </LinearLayout>
 
     <TextView
+        app:layout_constraintTop_toBottomOf="@id/ln_music"
+        android:id="@+id/tv_music_control"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
         android:layout_marginVertical="20dp"
         android:text="@string/music"
         android:textColor="@color/pink"
-        android:textSize="15sp" />
+        android:textSize="18sp" />
 
     <TableRow
+        app:layout_constraintTop_toBottomOf="@id/tv_music_control"
+        android:id="@+id/tr_music_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.09"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:layout_marginTop="10dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="0dp"
+            android:maxWidth="45dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:src="@mipmap/ic_play_button"
             tools:ignore="ContentDescription" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:layout_width="0dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:orientation="vertical">
 
@@ -63,36 +81,43 @@
                 android:layout_height="wrap_content"
                 android:text="@string/choose_music_player"
                 android:textColor="@color/black"
-                android:textSize="15sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/zing"
                 android:textColor="@color/grey_dak"
-                android:textSize="12sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
     </TableRow>
 
     <TableRow
+        app:layout_constraintTop_toBottomOf="@id/tr_music_1"
+        android:id="@+id/tr_music_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.09"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:layout_marginTop="10dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="0dp"
+            android:maxWidth="45dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:src="@mipmap/music"
             tools:ignore="ContentDescription" />
-
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:layout_width="0dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
             android:orientation="vertical">
 
             <TextView
@@ -100,20 +125,21 @@
                 android:layout_height="wrap_content"
                 android:text="@string/musiclayout"
                 android:textColor="@color/black"
-                android:textSize="15sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/longpress"
                 android:textColor="@color/grey_dak"
-                android:textSize="12sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <Switch
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
     </TableRow>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
