--- a/app/src/main/res/layout/frg_003.xml
+++ b/app/src/main/res/layout/frg_003.xml
@@ -8,7 +8,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:maxWidth="600dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
@@ -39,6 +38,8 @@
             android:background="@drawable/grid_bgr"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            android:layout_marginEnd="30dp"
             app:layout_constraintEnd_toStartOf="@id/cs_layout_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
