--- a/app/src/main/res/layout/frg_record_setup.xml
+++ b/app/src/main/res/layout/frg_record_setup.xml
@@ -82,7 +82,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
-            android:src="@mipmap/ic_play_button"
+            android:src="@mipmap/ic_camera"
             tools:ignore="ContentDescription" />
 
         <LinearLayout
@@ -127,7 +127,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
-            android:src="@mipmap/ic_play_button"
+            android:src="@mipmap/size"
             tools:ignore="ContentDescription" />
 
         <LinearLayout
@@ -187,7 +187,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/ic_play_button"
+                    android:src="@mipmap/ic_barchart"
                     tools:ignore="ContentDescription" />
 
                 <LinearLayout
@@ -232,7 +232,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/ic_play_button"
+                    android:src="@mipmap/gallery"
                     tools:ignore="ContentDescription" />
 
                 <LinearLayout
@@ -277,7 +277,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/ic_play_button"
+                    android:src="@mipmap/ic_gallery_i"
                     tools:ignore="ContentDescription" />
 
                 <LinearLayout
@@ -322,7 +322,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/ic_play_button"
+                    android:src="@mipmap/user"
                     tools:ignore="ContentDescription" />
 
                 <LinearLayout
@@ -367,7 +367,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/ic_play_button"
+                    android:src="@mipmap/orientation"
                     tools:ignore="ContentDescription" />
 
                 <LinearLayout
@@ -410,7 +410,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/ic_play_button"
+                    android:src="@mipmap/music"
                     tools:ignore="ContentDescription" />
 
                 <LinearLayout
