--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".act.HomeActivity">
-
+    tools:context=".view.act.HomeActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
