--- a/app/src/main/res/layout/frg_002_main.xml
+++ b/app/src/main/res/layout/frg_002_main.xml
@@ -3,12 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:id="@+id/drawer"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/iv_1"
@@ -23,6 +23,7 @@
                 tools:ignore="ContentDescription" />
 
             <Switch
+                android:id="@+id/sw_ios"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
