--- a/app/src/main/res/layout/frg_cus_controls.xml
+++ b/app/src/main/res/layout/frg_cus_controls.xml
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_control_pre"
+                android:id="@+id/rcv_control_pre"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -71,7 +71,7 @@
                 android:textStyle="bold"
                 android:layout_height="wrap_content"/>
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_control_non_pre"
+                android:id="@+id/rcv_control_non_pre"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
