--- a/app/src/main/res/layout/frg_record_setup.xml
+++ b/app/src/main/res/layout/frg_record_setup.xml
@@ -34,6 +34,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
         <TextView
+            android:id="@+id/tv_advance"
             android:layout_width="match_parent"
             android:text="@string/advance"
             android:layout_marginEnd="15dp"
@@ -42,6 +43,7 @@
             android:gravity="end"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/tv_basic"
             android:layout_width="match_parent"
             android:text="@string/basic"
             android:visibility="gone"
@@ -60,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
-        android:layout_marginVertical="20dp"
+        android:layout_marginVertical="10dp"
         android:text="@string/videocof"
         android:textColor="@color/pink"
         android:textSize="18sp" />
@@ -431,6 +433,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:ellipsize="end"
+                        android:lines="2"
                         android:text="@string/record_s_w_audio"
                         android:textColor="@color/grey_dak"
                         android:textSize="15sp" />
