--- a/app/src/main/res/layout/frg_cus_controls.xml
+++ b/app/src/main/res/layout/frg_cus_controls.xml
@@ -14,10 +14,10 @@
 
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="30dp"
+            android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_back"
-            tools:ignore="ContentDescription" />
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_back" />
 
         <TextView
             android:layout_width="match_parent"
